--- a/engagez-moi/src/styles/globals.css
+++ b/engagez-moi/src/styles/globals.css
@@ -1,12 +1,16 @@
-/* styles/globals.css */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Open+Sans:wght@400;700&family=Average+Sans:wght@400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Open+Sans:wght@300;400;700&display=swap');
+
+:root {
+  --font-family-average: 'Average Sans', sans-serif;
+  --font-family-open: 'Open Sans', sans-serif;
+}
 
 body {
-  font-family: 'Average Sans', sans-serif;
+  font-family: var(--font-family-average);
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--font-family-open);
 }
 
 @tailwind base;
@@ -15,34 +19,4 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   @apply font-sans;
-}
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
