--- a/engagez-moi/src/styles/globals.css
+++ b/engagez-moi/src/styles/globals.css
@@ -5,6 +5,11 @@
   --font-family-open: 'Open Sans', sans-serif;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: var(--font-family-average);
 }
@@ -19,4 +24,8 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   @apply font-sans;
+}
+a {
+  text-decoration: none !important;
+  color: inherit !important;
 }
