--- a/engagez-moi/src/styles/globals.css
+++ b/engagez-moi/src/styles/globals.css
@@ -1,17 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Open+Sans:wght@300;400;700&display=swap');
-
-:root {
-  --font-family-average: 'Average Sans', sans-serif;
-  --font-family-open: 'Open Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 body {
   font-family: var(--font-family-average);
+  margin: 0 !important; /* Utilisation de !important pour s'assurer que la marge est réinitialisée */
+}
+
+/* Vos styles existants */
+@import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Open+Sans:wght@300;400;700&display=swap');
+
+:root {
+  --font-family-average: 'Average Sans', sans-serif;
+  --font-family-open: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   @apply font-sans;
 }
+
 a {
   text-decoration: none !important;
   color: inherit !important;
