--- a/engagez-moi/src/styles/globals.css
+++ b/engagez-moi/src/styles/globals.css
@@ -1,19 +1,17 @@
+@import 'normalize.css';
+
+/* Réinitialisation des marges et des paddings pour tous les éléments */
 * {
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
   box-sizing: border-box;
 }
 
 html, body {
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
   height: 100%;
   width: 100%;
-}
-
-body {
-  font-family: var(--font-family-average);
-  margin: 0 !important; /* Utilisation de !important pour s'assurer que la marge est réinitialisée */
 }
 
 /* Vos styles existants */
@@ -22,8 +20,13 @@ body {
 :root {
   --font-family-average: 'Average Sans', sans-serif;
   --font-family-open: 'Open Sans', sans-serif;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
+}
+
+body {
+  margin: 0 !important;
+  font-family: var(--font-family-average);
 }
 
 h1, h2, h3, h4, h5, h6 {
